@@ -3,6 +3,8 @@ PHP 4                                                                      NEWS
 ?? ??? 2003, Version 4.3.5
 - Fixed header handler in NSAPI SAPI module (header->replace was ignored,
   send_default_content_type now sends value from php.ini). (Uwe Schindler)
+- Fixed bug #26267 (gmp_random() leaks memory and does not produce random
+  numbers). (Jani)
 - Fixed bug #26253 (ext/tokenizer: build as shared extension fails). (Jani)
 - Fixed bug #26235 (yp_first/yp_next do not specify correct key length). (Ilia)
 - Fixed bug #26216 ("getimagesize(): stream does not support seeking" when
